--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
     background-color: #F1F1F1;
     font-family: Raleway, sans-serif;
     font-weight: 400px;
+    overflow-x: hidden;
 
 }
 
